# python-package-template

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test-template.yml
hooks/: post_gen_project.py
tests/: conftest.py  test_bake.py
{{ cookiecutter.__package_name_kebab_case }}/: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.root.yml  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS.gitlab  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.__package_name_kebab_case }}/.devcontainer/: .env  .env-secrets.example  devcontainer.json  docker-compose.yml
{{ cookiecutter.__package_name_kebab_case }}/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
{{ cookiecutter.__package_name_kebab_case }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{ cookiecutter.__package_name_kebab_case }}/.github/workflows/: ci.yml  docs.yml  publish.yml  {{ cookiecutter.__package_name_kebab_case }}.yml
{{ cookiecutter.__package_name_kebab_case }}/.gitlab/issue_templates/: Bug.md  Feature.md
{{ cookiecutter.__package_name_kebab_case }}/.gitlab/merge_request_templates/: Default.md
{{ cookiecutter.__package_name_kebab_case }}/docs/: index.md  reference.md
{{ cookiecutter.__package_name_kebab_case }}/{{ cookiecutter.__package_name_snake_case }}/: cli.py  main.py
