[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.__package_name_kebab_case }}"
version = "0.0.1"
requires-python = "~={{ cookiecutter.python_version }}.0"
description = "{{ cookiecutter.package_description }}"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
readme = "README.md"
{%- if cookiecutter.open_source_license == "MIT" %}
license = { text = "MIT" }
{%- elif cookiecutter.open_source_license == "Apache-2.0" %}
license = { text = "Apache-2.0" }
{%- elif cookiecutter.open_source_license == "BSD-3-Clause" %}
license = { text = "BSD-3-Clause" }
{%- endif %}
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  # Add your dependencies here
  {%- if cookiecutter.accelerator in ["cuda", "rocm", "mps"] %}
  # "torch>=2.5.1,<2.6.0",
  {%- endif %}
  {%- if cookiecutter.accelerator == "tpu" %}
  # "torch>=2.5.1,<2.6.0",
  # "torch-xla>=2.5.0",
  {%- endif %}
  {%- if cookiecutter.include_cli | string == "True" %}
  "typer[all]>=0.12.0",
  {%- endif %}
]

[project.urls]
Repository = "{{ cookiecutter.package_url }}"
{%- if cookiecutter.include_cli | string == "True" %}

[project.scripts]
{{ cookiecutter.__package_name_kebab_case }} = "{{ cookiecutter.__package_name_snake_case }}.cli:app"
{%- endif %}

[tool.uv]
environments = ["python_version == '{{ cookiecutter.python_version }}'"]

# [[tool.uv.index]]
# name = "custom-pypi"
# url = "https://your-custom-pypi.example.com/simple/"
# explicit = true
{%- if cookiecutter.accelerator == "cuda" %}

# Uncomment for NVIDIA CUDA GPU support:
# [[tool.uv.index]]
# # The CUDA version specified here must match the one in `.devcontainer/docker-compose.yml`
# name = "pytorch-cu124"
# url = "https://download.pytorch.org/whl/cu124"
# explicit = true
#
# [tool.uv.sources]
# torch = [
#   {index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
# ]
# torchvision = [
#   {index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
# ]
{%- elif cookiecutter.accelerator == "rocm" %}

# Uncomment for AMD ROCm GPU support:
# [[tool.uv.index]]
# name = "pytorch-rocm62"
# url = "https://download.pytorch.org/whl/rocm6.2"
# explicit = true
#
# [tool.uv.sources]
# torch = [
#   {index = "pytorch-rocm62", marker = "sys_platform == 'linux'"},
# ]
# torchvision = [
#   {index = "pytorch-rocm62", marker = "sys_platform == 'linux'"},
# ]
{%- elif cookiecutter.accelerator == "mps" %}

# Apple MPS (Metal Performance Shaders) — no special index needed.
# MPS is built into standard PyTorch builds for macOS since PyTorch 2.0.
# Use device="mps" in your code. Note: MPS acceleration only works
# natively on macOS, not inside Docker containers.
{%- elif cookiecutter.accelerator == "tpu" %}

# Google TPU via PyTorch/XLA — install torch-xla alongside torch.
# See: https://github.com/pytorch/xla
# Run on TPU VMs or Colab; Docker GPU passthrough does not apply to TPUs.
{%- endif %}

[tool.hatch.build.targets.sdist]
include = ["{{ cookiecutter.__package_name_snake_case }}"]

[tool.hatch.build.targets.wheel]
include = ["{{ cookiecutter.__package_name_snake_case }}"]

[dependency-groups]
dev = [
  "poethepoet>=0.20.0",
  "ruff>=0.4.0",
  "pytest>=7.3.2",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.3.1",
  {%- if cookiecutter.include_mkdocs | string == "True" %}
  "mkdocs>=1.4.3",
  "mkdocs-material>=9.1.15",
  "mkdocstrings[python]>=0.22.0",
  {%- endif %}
  {%- if cookiecutter.type_checker == "mypy" %}
  "mypy>=1.10.0",
  {%- elif cookiecutter.type_checker == "ty" %}
  "ty>=0.0.31",
  {%- endif %}
  {%- if cookiecutter.include_precommit | string == "True" %}
  "pre-commit>=3.7.0",
  {%- endif %}
  "cruft>=2.15.0",
  "liccheck>=0.9.2",
  # pinned for liccheck
  "setuptools==78.1.0",
  # added for liccheck
  "pip>=25.0.1",
]

[tool.poe.tasks]
# https://github.com/nat-n/poethepoet
_format = "ruff format ."
_lint = "ruff check --fix ."

_check_format = "ruff format --check ."
_check_lint = "ruff check ."
{%- if cookiecutter.type_checker == "mypy" %}
_typecheck = "mypy ."
{%- elif cookiecutter.type_checker == "ty" %}
_typecheck = "ty check ."
{%- endif %}

# if you are using uv for dependency management, you have to generate a requirements.txt first
_convert_to_req_txt = "uv export --no-hashes --format=requirements-txt -o requirements.txt"
# check authorization of the licenses of dependencies as defined in [tool.liccheck] section
# (or a separate liccheck.ini-file)
_check_licenses = "liccheck -r requirements.txt"

check_licenses = [
    "_convert_to_req_txt",
    "_check_licenses",
]

{%- if cookiecutter.include_mkdocs | string == "True" %}
docs = "mkdocs serve"
{%- endif %}
precommit = ["_format", "_lint"]
{%- if cookiecutter.type_checker != "none" %}
check = ["_check_format", "_check_lint", "_typecheck", "check_licenses"]
typecheck = "_typecheck"
{%- else %}
check = ["_check_format", "_check_lint", "check_licenses"]
{%- endif %}
test = "pytest"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/7.1.x/reference/customize.html
addopts = "--color=yes --doctest-modules  -ra --cov --cov-report=html --cov-report term --cov-report xml:coverage.xml --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=python-junit.xml"
xfail_strict = true
pythonpath = ["{{ cookiecutter.__package_name_snake_case }}"]
testpaths = ["{{ cookiecutter.__package_name_snake_case }}", "tests"]
# ignore any of these paths
norecursedirs = [ ]

[tool.ruff]
# https://docs.astral.sh/ruff/
fix = true
line-length = 120
src = ["{{ cookiecutter.__package_name_snake_case }}", "tests"]
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E/F/W = pycodestyle + pyflakes, I = isort, UP = pyupgrade, B = bugbear, SIM = simplify

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.__package_name_snake_case }}"]

[tool.ruff.lint.pydocstyle]
convention = "{{ cookiecutter.docstring_style }}"
{%- if cookiecutter.type_checker == "mypy" %}

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "{{ cookiecutter.python_version }}"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["."]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
{%- elif cookiecutter.type_checker == "ty" %}

[tool.ty]
# https://docs.astral.sh/ty/reference/configuration/
# Target the same Python version as the project
environment.python-version = "{{ cookiecutter.python_version }}"

[tool.ty.src]
# Include the package and tests
include = ["{{ cookiecutter.__package_name_snake_case }}", "tests"]

[tool.ty.rules]
# See https://docs.astral.sh/ty/reference/rules/
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"
possibly-missing-import = "error"
# Tests can be less strict
# Rules that are too noisy for tests can be disabled here
{%- endif %}

[tool.liccheck]
# see also: https://pypi.org/project/liccheck/
# Authorized and unauthorized licenses in LOWER CASE
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd-3-clause",
  "bsd 3-clause",
  "bsd license",
  "isc",
  "isc license",
  "isc license (iscl)",
  "apache",
  "apache-2.0",
  "apache 2.0",
  "apache software",
  "apache software license",
  "apache license, version 2.0",
  "gnu lgpl",
  "historical permission notice and disclaimer (hpnd)",
  "lgpl with exceptions or zpl",
  "mozilla public license 2.0 (mpl 2.0)",
  "mit",
  "mit license",
  "new bsd license",
  "python software foundation license",
  "python software foundation",
  "psf-2.0",
  "simplified bsd",
  "the unlicense (unlicense)",
  "bsd-2-clause",
  "cc-by",
  "mit-cmu",
  "bsd 3 clause",
  "gnu library or lesser general public license (lgpl)",
  "mit and bsd-3-clause",
  "licenseRef-nvidia-proprietary",
  "apache-2.0 and bsd-2-clause",
  "mpl-2.0 and mit"
]
# as_regex = true -> e.g. '\bgpl'
unauthorized_licenses = [
  "gpl v3",
  "gnu general public license v2 or later (gplv2+)",
]
level = "standard"  # alternatives: "cautious", "paranoid"
requirement_txt_file = "./requirements.txt"
reporting_txt_file = "./liccheck_reporting.txt" # by default is None

[tool.liccheck.authorized_packages]
# Python software license (see http://zesty.ca/python/uuid.README.txt)
uuid = "1.30"
matplotlib-inline = ">=0.1.0"
# cookiecutter reports UNKNOWN on PyPI but is actually BSD-3-Clause
cookiecutter = ">=2.0"
# text-unidecode is dual-licensed Artistic/GPLv2+ — a transitive dev dep via cruft
text-unidecode = ">=1.3"
